Fixed few alignment issues

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -25,7 +25,8 @@ h6 {
 header.masthead {
   position: relative;
   /*background-color: #343a40;*/
-  background: url("../img/bg-masthead1.png") no-repeat center center;
+  /*background: url("../img/bg-masthead1.png") no-repeat center center;*/
+  background: url("../img/bg-t1.jpg") no-repeat center center;
   background-size: cover;
   padding-top: 8rem;
   padding-bottom: 8rem;
